--- a/src/crime.css
+++ b/src/crime.css
@@ -31,3 +31,17 @@
 .slick-dots li button:hover {
   opacity: 0.8; /* Change opacity on hover */
 }
+
+.fade-in {
+  opacity: 0;
+  transform: translateY(20px);
+  animation: fadeIn 0.5s forwards;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
